--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                                             <h2 class="fw-bolder">Project Name 1</h2>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="https://lh5.googleusercontent.com/FUQyYTmdReQ2LrGh0A0feEjcfHIG9Cjv92OMD1AgQjyjr2GV3mAyg6T5xblZjUFfnCZ34J8VUhk2sGaGWN4aG5oQIzrqD_zVTRa7_Z_nMqCPNYPcNuvN2i-RCOx7-cD6Exy0ivVMBt2Ta4jTdjRLikQ" alt="..." />
                                     </div>
                                 </div>
                             </div>
